# pystb

./: .coveragerc  .gitignore  .gitmodules  .gitreview  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  pystb.rst  usage.rst
example/: pyp_multinomial.py
pystb/: __init__.py  lgamma.pyx  stable.py  stable.pyx
pystb/tests/: test_pystb.py
