[metadata]
name = pystb
summary = Compute generalised second order Stirling numbers
description-file =
    README.rst
author = pystb developers
author-email = pystb-users@googlegroups.com
home-page = https://github.com/ariddell/pystb
classifier =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    pystb

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
