[metadata]
name = pystb
summary = Compute generalised second order Stirling numbers
description-file =
    README.rst
author = pystb developers
author-email = pystb-users@googlegroups.com
home-page = https://github.com/ariddell/pystb
classifier =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    pystb

[extension=pystb.stable]
sources =
    pystb/stable.c
    pystb/libstb/lib/stable.c
    pystb/libstb/lib/digamma.c
    pystb/libstb/lib/arms.c
    pystb/libstb/lib/sapprox.c
    pystb/libstb/lib/sslice.c
    pystb/libstb/lib/sampleb.c
    pystb/libstb/lib/samplea.c
    pystb/libstb/lib/yaps.c
    pystb/libstb/lib/lgamma.c
    pystb/libstb/lib/sympoly.c
    pystb/libstb/lib/digammainv.c
    pystb/libstb/lib/gslrandist.c
include_dirs =
    pystb/libstb/lib

[extension=pystb.lgamma]
sources =
    pystb/lgamma.c
    pystb/libstb/lib/lgamma.c
    pystb/libstb/lib/digamma.c
include_dirs =
    pystb/libstb/lib

[sdist]
pre-hook.sdist_pre_hook = pystb._setup_hooks.sdist_pre_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
